updating article draft